# wacrana

./: .gitmodules  BrowserTab.cc  BrowserTab.hh  BrowserTab.ui  CMakeLists.txt  MainWindow.cc  MainWindow.hh  MainWindow.ui  README.md  TitleBar.cc  TitleBar.hh  main.cc  wacrana.json.in
dlib/: rvm_test.cc
doc/: Doxyfile.in  Plugin.md
headless/: headless.cc
include/: BrowserTab.hpp  Context.hpp  Export.hpp  GeneralPlugin.hpp  MainWindow.hpp  Persona.hpp  Plugin.hpp  Timer.hpp
plugins/: Beethoven.cc  Beethoven.hh  Beethoven.js  Beethoven.qrc  ResourceLoader.hh  SimpleHome.cc  SimpleHome.hh  Wait.cc  Wait.hh
plugins/beethoven/: Beethoven.cc  Beethoven.hh  Wait.cc  Wait.hh  export.cc
plugins/beethoven/res/: Beethoven.qrc
plugins/res/: Beethoven.js
res/: Google.js  webhama.qrc
src/: ActionPersona.cc  ActionPersona.hh  ActivePersona.cc  ActivePersona.hh  AsioExecutor.cc  AsioExecutor.hh  Async.cc  Async.hh  BrowserTab.cc  BrowserTab.hh  BrowserTab.ui  Configuration.cc  Configuration.hh  Context.cc  Context.hh  Exception.cc  Exception.hh  FunctorEvent.cc  FunctorEvent.hh  MainWindow.cc  MainWindow.hh  MainWindow.ui  OwnedFuture.cc  OwnedFuture.hh  PluginManager.cc  PluginManager.hh  PluginProxy.cc  PluginProxy.hh  ProgressTimer.cc  ProgressTimer.hh  TimerEventCallback.hh  main.cc
src/async/: Async.hh  Executor.cc  Executor.hh  Future.hh  LocalExecutor.cc  LocalExecutor.hh
src/async/test/: LocalTest.cc  main.cc
